--- a/style.css
+++ b/style.css
@@ -30,3 +30,24 @@ body,h1,h2,h3,h4,h5,h6,p,b,i,a{
      top:0 !important;
      left: 0 !important;
 }
+/* ----------activity-section------------ */
+/* ----------activity-section------------ */
+.activity-section p{
+     line-height: 30px;
+}
+.sh{
+     box-shadow: 0px 6px 0px 0px rgb(255, 0, 0);
+}
+/* ---------feature-section---------------- */
+/* ---------feature-section---------------- */
+.left-sec{
+     width: 45%;
+     
+}
+.object-fit{
+     object-fit: cover;
+}
+.right-sec{
+     width: 70%;
+     padding:25px;
+}
